--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Core Python dependencies
-pymongo==4.6.1
+pymongo>=4.3.3
 
 # Testing
 pytest==7.4.4
@@ -35,3 +35,5 @@ ipython
 typer==0.12.3
 
 # (You may have other small deps for specific extractors, but these are core.)
+
+python-dotenv>=1.0.0
