--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -29,7 +29,7 @@ jobs:
       MONGODB_PORT: 27017
       MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
       MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
-      MONGODB_DATABASE: ${{ secrets.MONGODB_DATABASE }}
+      MONGODB_DATABASE: sourcesherpa
 
     steps:
       - name: Checkout code
