--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -1,4 +1,4 @@
-name: Python Storage Loaders CI
+name: Python CI (SonarCloud & Coverage)
 
 on:
   push:
@@ -7,58 +7,9 @@ on:
     branches: [main]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    services:
-      mongo:
-        image: mongo:6.0
-        ports:
-          - 27017:27017
-        env:
-          MONGO_INITDB_ROOT_USERNAME: ${{ secrets.MONGODB_USERNAME }}
-          MONGO_INITDB_ROOT_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
-          MONGO_INITDB_DATABASE: ${{ secrets.MONGODB_DATABASE }}
-        options: >-
-          --health-cmd "mongosh --eval 'db.runCommand(\"ping\").ok'" 
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
-    env:
-      MONGODB_HOST: localhost
-      MONGODB_PORT: 27017
-      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
-      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
-      MONGODB_DATABASE: sourcesherpa
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-
-      - name: Install dependencies
-        run: |
-          pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest pymongo pytest-cov
-
-      - name: Run tests with coverage
-        run: pytest --cov=src --cov-report=xml
-
-      - name: Upload coverage report
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: coverage.xml
-
   sonarcloud:
     name: SonarCloud Scan
     runs-on: ubuntu-latest
-    needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -73,10 +24,30 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Download coverage report
+      - name: Download coverage report (extractors)
         uses: actions/download-artifact@v4
         with:
-          name: coverage-report
+          name: extractors-coverage-report
+        continue-on-error: true
+
+      - name: Download coverage report (api)
+        uses: actions/download-artifact@v4
+        with:
+          name: api-coverage-report
+        continue-on-error: true
+
+      - name: Download coverage report (storage)
+        uses: actions/download-artifact@v4
+        with:
+          name: storage-coverage-report
+        continue-on-error: true
+
+      - name: Combine coverage reports
+        run: |
+          ls -l *.xml || true
+          coverage combine || true
+          coverage xml || true
+        continue-on-error: true
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v5
