--- a/.github/workflows/test_extractors.yml
+++ b/.github/workflows/test_extractors.yml
@@ -28,8 +28,10 @@ jobs:
           MONGO_INITDB_ROOT_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
           MONGO_INITDB_DATABASE: ${{ secrets.MONGODB_DATABASE }}
         options: >-
-          --health-cmd "mongosh --eval 'db.runCommand(\"ping\").ok'" \
-          --health-interval 10s --health-timeout 5s --health-retries 5
+          --health-cmd mongosh --eval "db.runCommand({ping: 1})"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     env:
       MONGODB_HOST: localhost
       MONGODB_PORT: 27017
